# golos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  app_launcher.py  build_app.sh  build_intel_app.sh  config.toml  corrections.tsv  dictate.icns  dictate.sh  dictionary.txt  golos.icns  make_dmg.sh  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements-local.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
assets/: make_icon.py  make_icon.sh
dictate/: __init__.py  __main__.py  app.py  bench.py  bubble.py  config.py  context.py  diagnostics.py  dictionary.py  editwatcher.py  formatter.py  history.py  hotkeys.py  insert.py  learning.py  onboarding.py  openrouter.py  permissions.py  providers.py  recorder.py  settings.py  stt.py
dictate_core/: __init__.py  dictionary.py  formatter.py  learning.py  learning_reviewer.py  openrouter.py  recorder.py  stt.py
docs/: GUIDE.md  PRODUCT.md  PRODUCT_PAGE.md  ROADMAP.md  TECH.md  TESTING.md  VIDEO_PRODUCTION.md  VISION.md
scripts/: capture_docs_screenshots.py  test_app_state.py  test_bubble_state.py  test_formatter_behavior.py  test_hotkey_events.py  test_learning.py  test_learning_reviewer.py  test_multiline_insert.py
site/: .gitignore  README.md  app.js  index.html  styles.css
site/docs/: docs.css  docs.js  index.html
site/docs/better-results/: index.html
site/docs/getting-started/: index.html
site/docs/privacy/: index.html
site/docs/settings/: index.html
site/docs/troubleshooting/: index.html
site/docs/workflows/: index.html
tests/: conftest.py  test_app_state.py  test_bubble_state.py  test_community.py  test_core_pipeline_decode.py  test_diagnostics.py  test_dictionary.py  test_dmg_layout.py  test_docs_screenshots.py  test_editwatcher.py  test_formatter_core.py  test_help_center.py  test_hotkeys.py  test_insert.py  test_learning.py  test_learning_config.py  test_learning_reviewer.py  test_learning_ttl.py  test_level_bridge.py  test_openrouter_helpers.py  test_persistence.py  test_pipeline.py  test_recovery.py  test_runtime_wake.py  test_site.py  test_soak.py  test_stt_helpers.py
