[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictate"
version = "0.3.2"
description = "Push-to-talk dictation for macOS, plus dictate_core: an embeddable voice pipeline library"
requires-python = ">=3.11"
dependencies = ["httpx", "numpy"]

[project.optional-dependencies]
mlx = ["mlx-whisper"]
local = ["mlx-whisper"]
mic = ["sounddevice"]
app = [
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "pyobjc-framework-AVFoundation",
    "toml",
    "sounddevice",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dictate", "dictate_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["dictate", "dictate_core"]
omit = [
    "*/build/*",
    "*/dist/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/dictate.egg-info/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor only — set at or below the measured honest baseline in docs/TESTING.md
# (combined dictate+dictate_core branch coverage 34.19% as of 2026-07-21).
# Raise only after intentional coverage gains; never omit hard production files
# just to inflate the number.
fail_under = 24
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
